# switchboard-v2-example

./: .eslintrc.json  .gitignore  2.json  Crank.Dockerfile  README.md  authority-keypair.notused.json  docker-compose.yml  input.json  oracle.env  oracleQueue.definition.json  output1.json  output2.json  package-lock.json  package.json  sample.definition.aggregator.json  sample.definition.queue.json  sample.feed.json  sample.oracle.json  tsconfig.json
accounts/: README.md
example/: main.ts  test.ts
feeds/: README.md  eth.json  ltc.json  sample.ignore.json
keypairs/: README.md
on-chain-parser/: Anchor.toml
on-chain-parser/tests/: on-chain-parser.ts
on-chain-program/: Anchor.toml  Cargo.toml
on-chain-program/migrations/: deploy.ts
on-chain-program/programs/on-chain-program/src/: lib.rs
on-chain-program/src/: lib.rs
on-chain-program/tests/: on-chain-program.ts
rust/: README.md
rust/anchor-feed-parser/: Anchor.toml  README.md  package.json.testing
rust/anchor-feed-parser/programs/anchor-feed-parser/: Cargo.toml
rust/anchor-feed-parser/programs/anchor-feed-parser/src/: lib.rs
rust/on-chain-feed-parser/: Cargo.toml  README.md  package.json.testing
secrets/: README.md
src/: aggregator.ts  anchor.ts  authority.ts  config.ts  const.ts  jobs.ts  main.ts  oracleQueue.ts  oracleSchema.ts  program.ts  programInit.ts  schema.ts  simple.ts
src/accounts/: aggregator.ts  aggregatorAccount.ts  authority.ts  crankAccount.ts  index.ts  jobAccount.ts  jobs.ts  load.ts  oracleAccount.ts  oracleQueue.ts  oracleQueueAccount.ts  (+1 more)
ts/: config.ts  main.ts  test.ts
(+251 files in other folders)
