[package]
name = "switchboard-v2-example"
version = "0.1.0"
authors = ["mgild@umich.edu"]
edition = "2018"

[features]
no-entrypoint = []

[dependencies]
bincode = "1.3.1"
byteorder = "1.3.4"
faster-hex = "0.5.0"
quick-protobuf = "0.8.0"
solana-program = "1.6"
switchboard-program = "0.1.43"
base58 = "0.1.0"
lexical = "5.2.2" # rust default float parsing is ridiculously slow

[lib]
crate-type = ["cdylib", "lib"]