[package]
name = "anchor-feed-parser"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"


[lib]
crate-type = ["cdylib", "lib"]
name = "anchor_feed_parser"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.18.0"
switchboard-aggregator = { git = "https://github.com/gallynaut/switchboard-aggregator" }
solana-program = "1.8.2"
bytemuck = "1.7.2"
